mad nav transparent

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,8 @@
 body { padding-top: 70px; }
+.navbar {
+    background-color: transparent;
+    background: transparent;
+    border-color: transparent;
+}
+
+/*.navbar li { color: #000 }*/
