--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,22 @@
-body { padding-top: 70px; }
+body {
+    padding-top: 70px;
+    background: #262626;
+    font-size: 16px;
+}
+/* makes nav bar transparent http://stackoverflow.com/questions/21218577/transparent-color-of-bootstrap-3-navbar*/
+/*.navbar {*/
+    /*background-color: transparent;*/
+    /*background: transparent;*/
+    /*border-color: transparent;*/
+/*}*/
+/* Makes nav bar transparent http://stackoverflow.com/questions/16392952/css-to-make-bootstrap-navbar-transparent*/
 .navbar {
-    background-color: transparent;
-    background: transparent;
-    border-color: transparent;
+    border-width: 0px;
+    -webkit-box-shadow: 0px 0px;
+    box-shadow: 0px 0px;
+    background-color: rgba(0,0,0,0.0);
+    background-image: -webkit-gradient(linear, 50.00% 0.00%, 50.00% 100.00%, color-stop( 0% , rgba(0,0,0,0.00)),color-stop( 100% , rgba(0,0,0,0.00)));
+    background-image: -webkit-linear-gradient(270deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
+    background-image: linear-gradient(180deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
 }
 
-/*.navbar li { color: #000 }*/
