--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
-    padding-top: 70px;
+    padding-top: 100px;
     background: #262626;
     font-size: 16px;
+    color: #fff;
 }
 /* makes nav bar transparent http://stackoverflow.com/questions/21218577/transparent-color-of-bootstrap-3-navbar*/
 /*.navbar {*/
@@ -18,5 +19,43 @@ body {
     background-image: -webkit-gradient(linear, 50.00% 0.00%, 50.00% 100.00%, color-stop( 0% , rgba(0,0,0,0.00)),color-stop( 100% , rgba(0,0,0,0.00)));
     background-image: -webkit-linear-gradient(270deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
     background-image: linear-gradient(180deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
+    padding-top: 15px;
+}
+.logo {
+    padding-left: 0;
+}
+.logo img {
+    max-width: 80px;
 }
 
+
+/****************************************/
+
+
+/*HERO Image*/
+
+.turts img {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+/****************************************/
+
+
+/*About Me Section*/
+.picofme {
+    max-width: 150px;
+}
+
+/****************************************/
+
+/*Media Query*/
+@media screen and (max-width: 767px) {
+    .projects img {
+    margin-left: auto;
+    margin-right: auto;
+    }
+}
+
+/****************************************/
