--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,12 @@ body {
     background-image: linear-gradient(180deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
     padding-top: 15px;
 }
+
+/*.logo {*/
+    /*padding-left: 0;*/
+/*}*/
+
 .logo {
-    padding-left: 0;
-}
-.logo img {
     max-width: 80px;
 }
 
@@ -34,7 +36,7 @@ body {
 
 /*HERO Image*/
 
-.turts img {
+.hero .turts {
     margin-left: auto;
     margin-right: auto;
 }
